# SmallFormats

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  TODO.md  _manage.py  fly.toml  manage  pyproject.toml
.fly/scripts/: collectstatic.sh
_nonship/: partners.sql  sample_archidekt_deck.json  sample_moxfield_deck.json  sample_tappedout_deck.json  tribal-design.md  typal-design.md
backups/: README.md
crawler/: admin.py  card_parsing.py  crawlers.py  models.py  urls.py  views.py  views_tappedout.py
crawler/migrations/: 0001_add_crawl_result.py  0001_initial.py  0002_add_crawl_run.py  0002_make_crawl_resumable.py  0003_decouple_runs_from_decklist_fetches.py  0003_search_back_to.py  0004_add_moxfield.py  0005_deckcrawlresult_fetchable.py  0006_remove_superfluous_target.py  0007_logentry.py  0008_logstart.py  0009_port_logs.py  0010_drop_follows.py  0011_add_tappedout.py
crawler/tests/: _bogus01-missing-data.json  _bogus02-no-id.json  _bogus03-no-oracle-id.json  ley-weaver.json  propaganda-propaganda.json  static-orb.json  test_card_parsing.py
decklist/: admin.py  apps.py  models.py  serializers.py  synergy.py  tests.py  urls.py  views.py
decklist/migrations/: 0001_initial.py  0002_basic_data_model.py  0002_increase_typeline.py  0003_fix_human_label.py  0003_setcode_embiggen.py  0004_add_legality.py  0004_unique_decks.py  0005_add_editorial.py  0005_card_vs_printing.py  0006_add_set_code.py  0006_image_improvements.py  0007_add_moxfield.py  0007_rarity_typeline_info.py  0008_images_and_links.py  0008_sitestat.py  0009_add_tappedout.py  0009_card_partner_type.py  0010_commander.py  0011_link_deck_to_commander.py  0012_add_card_indexes.py  0013_create_cmdr_id.py  0014_populate_cmdr_id.py  0015_make_cmdr_id_unique.py  0016_theme.py  0017_example_tribes.py  0018_card_keywords.py  0019_example_keywords.py  0020_synergyscore_synergyscore_commander_card.py  0021_themeresult.py  0022_top_card_models.py  0023_top_card_materialized_views.py  0024_alter_card_scryfall_uri.py  0025_alter_theme_filter_type.py
decklist/models/: __init__.py  card.py  cardindeck.py  commander.py  datasource.py  deck.py  printing.py  (+6 more)
scheduled/: crontab  daily.sh  hourly.sh  weekly.sh
smallformats/: __init__.py  asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
stats_recos/: apps.py  synergy.py  urls.py  views.py  wubrg_utils.py
(+107 files in other folders)
