[tool.poetry]
name = "smallformats"
version = "0.5.0"
description = "A deck-stats site for smaller MtG formats like PDH"
authors = ["Matt Cooper <vtbassmatt@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
dj-database-url = "^2.3.0"
daphne = "^4.1.2"
markdown = "^3.7"
httpx = "^0.28.0"
json-stream = "^2.3.2"
django-debug-toolbar = "^4.4.6"
django-htmx = "^1.21.0"
django-cache-url = "^3.4.5"
whitenoise = "^6.8.2"
psycopg = {extras = ["binary"], version = "^3.2.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
