[project]
name = "smallformats"
version = "0.5.0"
description = "A deck-stats site for smaller MtG formats like PDH"
authors = [{ name = "Matt Cooper", email = "vtbassmatt@gmail.com" }]
requires-python = "~=3.13"
readme = "README.md"
license = "MIT"
dependencies = [
    "django>=5.2,<5.3",
    "dj-database-url>=2.3.0,<3",
    "markdown~=3.7",
    "httpx>=0.28.0,<0.29",
    "json-stream>=2.3.2,<3",
    "django-htmx>=1.21.0,<2",
    "django-cache-url>=3.4.5,<4",
    "psycopg[binary]>=3.2.3,<4",
    "uvicorn[standard]>=0.34.2,<0.35",
    "uvicorn-worker>=0.3.0,<0.4",
    "gunicorn>=23.0.0,<24",
    "django-debug-toolbar>=5.2.0",
]

[dependency-groups]
dev = ["whitenoise>=6.9.0,<7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crawler", "decklist", "smallformats"]
